--- a/login.ui
+++ b/login.ui
@@ -6,46 +6,46 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>307</height>
+    <width>392</width>
+    <height>250</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Login</string>
+   <string>로그인</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>110</y>
-      <width>67</width>
+      <x>30</x>
+      <y>90</y>
+      <width>61</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string>PW</string>
+     <string>비밀번호</string>
     </property>
    </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>40</y>
-      <width>67</width>
+      <y>50</y>
+      <width>41</width>
       <height>17</height>
      </rect>
     </property>
     <property name="text">
-     <string>ID</string>
+     <string>아이디</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="get_id">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>70</y>
-      <width>211</width>
+      <x>90</x>
+      <y>50</y>
+      <width>171</width>
       <height>25</height>
      </rect>
     </property>
@@ -53,9 +53,9 @@
    <widget class="QLineEdit" name="get_pw">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>140</y>
-      <width>211</width>
+      <x>90</x>
+      <y>90</y>
+      <width>171</width>
       <height>25</height>
      </rect>
     </property>
@@ -66,48 +66,51 @@
    <widget class="QPushButton" name="login_btn">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>190</y>
-      <width>89</width>
-      <height>25</height>
+      <x>280</x>
+      <y>50</y>
+      <width>81</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
-     <string>Login</string>
+     <string>로그인</string>
     </property>
    </widget>
    <widget class="QPushButton" name="signup_btn">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>190</y>
-      <width>89</width>
+      <x>90</x>
+      <y>130</y>
+      <width>81</width>
       <height>25</height>
      </rect>
     </property>
     <property name="text">
-     <string>Signup</string>
+     <string>회원가입</string>
     </property>
    </widget>
    <widget class="QPushButton" name="find_btn">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>120</y>
-      <width>111</width>
-      <height>21</height>
+      <x>180</x>
+      <y>130</y>
+      <width>81</width>
+      <height>25</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>9</pointsize>
+      <pointsize>11</pointsize>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">border:none;</string>
+     <string notr="true"/>
     </property>
     <property name="text">
-     <string>forgot passworld?</string>
+     <string>ID/PW 찾기</string>
     </property>
    </widget>
   </widget>
@@ -116,7 +119,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>300</width>
+     <width>392</width>
      <height>22</height>
     </rect>
    </property>
