--- a/signup.ui
+++ b/signup.ui
@@ -6,19 +6,19 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>308</width>
+    <width>373</width>
     <height>333</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Sign up</string>
+   <string>회원가입</string>
   </property>
   <widget class="QLineEdit" name="signup_pw2">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>220</y>
-     <width>181</width>
+     <x>110</x>
+     <y>150</y>
+     <width>131</width>
      <height>25</height>
     </rect>
    </property>
@@ -29,9 +29,9 @@
   <widget class="QLineEdit" name="signup_pw">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>160</y>
-     <width>181</width>
+     <x>110</x>
+     <y>90</y>
+     <width>131</width>
      <height>25</height>
     </rect>
    </property>
@@ -42,9 +42,9 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>30</y>
-     <width>67</width>
+     <x>70</x>
+     <y>210</y>
+     <width>31</width>
      <height>17</height>
     </rect>
    </property>
@@ -55,22 +55,22 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>140</y>
-     <width>67</width>
+     <x>50</x>
+     <y>90</y>
+     <width>61</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>PW</string>
+    <string>비밀번호</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="signup_id">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>100</y>
-     <width>181</width>
+     <x>110</x>
+     <y>30</y>
+     <width>131</width>
      <height>25</height>
     </rect>
    </property>
@@ -78,27 +78,27 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>80</y>
-     <width>67</width>
+     <x>60</x>
+     <y>30</y>
+     <width>41</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>ID</string>
+    <string>아이디</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>200</y>
-     <width>67</width>
+     <x>20</x>
+     <y>150</y>
+     <width>91</width>
      <height>17</height>
     </rect>
    </property>
    <property name="text">
-    <string>PW확인</string>
+    <string>비밀번호 확인</string>
    </property>
   </widget>
   <widget class="QPushButton" name="confirm_btn">
@@ -107,9 +107,9 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>30</x>
+     <x>110</x>
      <y>260</y>
-     <width>89</width>
+     <width>61</width>
      <height>25</height>
     </rect>
    </property>
@@ -120,9 +120,9 @@
   <widget class="QLineEdit" name="signup_name">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>50</y>
-     <width>181</width>
+     <x>110</x>
+     <y>210</y>
+     <width>131</width>
      <height>25</height>
     </rect>
    </property>
@@ -130,9 +130,9 @@
   <widget class="QPushButton" name="back_btn">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>180</x>
      <y>260</y>
-     <width>89</width>
+     <width>61</width>
      <height>25</height>
     </rect>
    </property>
@@ -143,8 +143,8 @@
   <widget class="QPushButton" name="idcheck_btn">
    <property name="geometry">
     <rect>
-     <x>220</x>
-     <y>100</y>
+     <x>250</x>
+     <y>30</y>
      <width>71</width>
      <height>25</height>
     </rect>
