--- a/tourist.ui
+++ b/tourist.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Tourist</string>
+   <string>여행지 조회</string>
   </property>
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
